--- a/index.html
+++ b/index.html
@@ -1,57 +1,133 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Landing Repaso</title>
-    <link rel="stylesheet" href="estilos.css">
-</head>
-<body>
+    <link rel="stylesheet" href="estilos.css" />
+  </head>
+  <body>
     <div class="primer_contenedor">
-   <div class="tituloh1">
-    <h1>Dopetrope</h1>
-</div> 
+      <div class="tituloh1">
+        <h1>Dopetrope</h1>
+      </div>
 
-<div>
-    <nav class="menu">
-    <ul class="menu_li">
-        <li>Home</li>
-        <li>Dropdown</li>
-        <li>Left Sidebar</li>
-        <li>Right Sidebar</li>
-        <li>No Sidebar</li>
-    </ul>
-    </nav>
-
-</div>
-</div>
-<div class="howdy_background">
-
-    <img src="./images/pic01.jpg" alt="">
-    <div class="howdy_cuadrado">
+      <div>
+        <nav class="menu">
+          <ul class="menu_li">
+            <li>Home</li>
+            <li>Dropdown</li>
+            <li>Left Sidebar</li>
+            <li>Right Sidebar</li>
+            <li>No Sidebar</li>
+          </ul>
+        </nav>
+      </div>
+    </div>
+    <div class="howdy_background">
+      <img src="./images/pic01.jpg" alt="" />
+      <div class="howdy_cuadrado">
         <h2>Howdy. This is Dopetrope.</h2>
         <p>A responsive template by HTML5 UP</p>
+      </div>
     </div>
-</div>
-<div class="tercer_contenedor">
-    <div>
-        <img src="./images/logo_1.png" alt="">
-        <h3>Ipsum consequat</h3> 
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-    </div>
-    <div class="logo_centro">
-        <img src="./images/logo_2.png" alt="">
+    <div class="tercer_contenedor">
+      <div>
+        <img class="imagen_espacio" src="./images/logo1.jpg" alt="" />
+        <h3>Ipsum consequat</h3>
+        <p>
+          Lorem Ipsum is simply dummy text of the printing and typesetting
+          industry.
+        </p>
+      </div>
+      <div class="logo_centro">
+        <img class="imagen_espacio" src="./images/logo2.jpg" alt="" />
         <h3>Magna etiam dolor</h3>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-    </div>
-    <div>
-        <img src="./images/logo_3.png" alt="">
+        <p>
+          Lorem Ipsum is simply dummy text of the printing and typesetting
+          industry.
+        </p>
+      </div>
+      <div>
+        <img class="imagen_espacio" src="./images/logo3.jpg" alt="" />
         <h3>Tempus adipiscing</h3>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+        <p>
+          Lorem Ipsum is simply dummy text of the printing and typesetting
+          industry.
+        </p>
+      </div>
     </div>
 
-</div>
+    <div class="botones_div">
+      <button class="boton1">Get Started</button>
+      <button class="boton2">Learn More</button>
+    </div>
 
-</body>
+    <div class="contenedor_cuatro">
+      <div class="portafolio">
+        <hr class="hr" />
+        <h3>My Portfolio</h3>
+        <hr class="hr" />
+      </div>
+      <div class="portafolio_imagenes">
+        <div class="portafolio_imagenes_div">
+          <img src="./images/pic02.jpg" alt="" />
+          <h3>Ipsum feugiat et dolor</h3>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua.
+          </p>
+          <a href="">Find out more</a>
+        </div>
+        <div class="portafolio_imagenes_div">
+          <img src="./images/pic03.jpg" alt="" />
+          <h3>Ipsum feugiat et dolor</h3>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua.
+          </p>
+          <a href="">Find out more</a>
+        </div>
+        <div class="portafolio_imagenes_div">
+          <img src="./images/pic04.jpg" alt="" />
+          <h3>Ipsum feugiat et dolor</h3>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua.
+          </p>
+          <a href="">Find out more</a>
+        </div>
+        <div class="portafolio_imagenes_div">
+          <img src="./images/pic05.jpg" alt="" />
+          <h3>Ipsum feugiat et dolor</h3>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua.
+          </p>
+          <a href="">Find out more</a>
+        </div>
+        <div class="portafolio_imagenes_div">
+          <img src="./images/pic06.jpg" alt="" />
+          <h3>Ipsum feugiat et dolor</h3>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua.
+          </p>
+          <a href="">Find out more</a>
+        </div>
+        <div class="portafolio_imagenes_div">
+          <img src="./images/pic07.jpg" alt="" />
+          <h3>Ipsum feugiat et dolor</h3>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua.
+          </p>
+          <a href="">Find out more</a>
+        </div>
+      </div>
+      <div class="blog"></div>
+      <div class="blog_imagenes"></div>
+    </div>
+  </body>
 </html>
