--- a/index.html
+++ b/index.html
@@ -72,62 +72,102 @@
       </div>
       <div class="portafolio_imagenes">
         <div class="portafolio_imagenes_div">
-          <img src="./images/pic02.jpg" alt="" />
+          <img class="portafolio_imagenes_div_img" src="./images/pic02.jpg" alt="" />
           <h3>Ipsum feugiat et dolor</h3>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
             eiusmod tempor incididunt ut labore et dolore magna aliqua.
           </p>
-          <a href="">Find out more</a>
+          <div class="portafolio_enlace_div">
+          <a class="portafolio_enlace" href="">Find out more</a>
+        </div>
         </div>
         <div class="portafolio_imagenes_div">
-          <img src="./images/pic03.jpg" alt="" />
+          <img  class="portafolio_imagenes_div_img" src="./images/pic03.jpg" alt="" />
           <h3>Ipsum feugiat et dolor</h3>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
             eiusmod tempor incididunt ut labore et dolore magna aliqua.
           </p>
-          <a href="">Find out more</a>
+          <div class="portafolio_enlace_div">
+          <a class="portafolio_enlace" href="">Find out more</a>
+          </div>
         </div>
         <div class="portafolio_imagenes_div">
-          <img src="./images/pic04.jpg" alt="" />
+          <img  class="portafolio_imagenes_div_img" src="./images/pic04.jpg" alt="" />
+
           <h3>Ipsum feugiat et dolor</h3>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
             eiusmod tempor incididunt ut labore et dolore magna aliqua.
           </p>
-          <a href="">Find out more</a>
+          <div class="portafolio_enlace_div">
+          <a class="portafolio_enlace" href="">Find out more</a>
+        </div>
         </div>
         <div class="portafolio_imagenes_div">
-          <img src="./images/pic05.jpg" alt="" />
+          <img class="portafolio_imagenes_div_img"  src="./images/pic05.jpg" alt="" />
           <h3>Ipsum feugiat et dolor</h3>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
             eiusmod tempor incididunt ut labore et dolore magna aliqua.
           </p>
-          <a href="">Find out more</a>
+          <div class="portafolio_enlace_div">
+          <a class="portafolio_enlace" href="">Find out more</a>
+          </div>
         </div>
         <div class="portafolio_imagenes_div">
-          <img src="./images/pic06.jpg" alt="" />
+          <img class="portafolio_imagenes_div_img" src="./images/pic06.jpg" alt="" />
           <h3>Ipsum feugiat et dolor</h3>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
             eiusmod tempor incididunt ut labore et dolore magna aliqua.
           </p>
-          <a href="">Find out more</a>
+          <div class="portafolio_enlace_div">
+          <a class="portafolio_enlace" href="">Find out more</a>
+          </div>
         </div>
         <div class="portafolio_imagenes_div">
-          <img src="./images/pic07.jpg" alt="" />
+          <img class="portafolio_imagenes_div_img" src="./images/pic07.jpg" alt="" />
           <h3>Ipsum feugiat et dolor</h3>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
             eiusmod tempor incididunt ut labore et dolore magna aliqua.
           </p>
-          <a href="">Find out more</a>
+          <div class="portafolio_enlace_div">
+          <a class="portafolio_enlace" href="">Find out more</a>
+          </div>
         </div>
       </div>
       <div class="blog"></div>
       <div class="blog_imagenes"></div>
+    
+    <div class="portafolio">
+      <hr class="hr" />
+      <h3>The Blog</h3>
+      <hr class="hr" />
     </div>
+    <div class="contenedor_blog">
+    <div class="blog_imagenes_div portafolio_imagenes_div">
+      <img  class="portafolio_imagenes_div_img" src="./images/pic08.jpg" alt="">
+      <h3>Magna tempus consequat</h3>
+      <p>Lorem ipsum dolor sit amet sit veroeros sed et blandit conseguiat sed verorres loeres et blandit adispicing fugian phaselllus tempus hedreit, totot ivtae mattis tempor, sapien sem feugiat sapien, id suscipit magna felis nec elit. Class aptent  tciti sociosque ad litor torquent per conubia nostra, per inceptos lorem ipsum dolor sit amet.</p>
+      <ul class="blog_enlace">
+        <li class="boton_blog1"><img class="iconos" src="./images/documento.png" alt=""><a href="">Continue Reading</a></li>
+        <li class="boton_blog2"><img class="iconos" src="./images/bocadillo.png" alt=""><a href="">33 comments</a></li>
+      </ul>
+    </div>
+    <div class="blog_imagenes_div portafolio_imagenes_div">
+      <img class="portafolio_imagenes_div_img" src="./images/pic09.jpg" alt="">
+      <h3>Atent veroeros aliquam</h3>
+      <p>Lorem ipsum dolor sit amet sit veroeros sed et blandit conseguiat sed verorres loeres et blandit adispicing fugian phaselllus tempus hedreit, totot ivtae mattis tempor, sapien sem feugiat sapien, id suscipit magna felis nec elit. Class aptent  tciti sociosque ad litor torquent per conubia nostra, per inceptos lorem ipsum dolor sit amet.</p>
+      <ul class="blog_enlace">
+        <li class="boton_blog1"><img class="iconos" src="./images/documento.png" alt=""><a href="">Continue Reading</a></li>
+        <li class="boton_blog2"><img class="iconos" src="./images/bocadillo.png" alt=""><a href="">33 comments</a></li>
+      </ul>
+    </div>
+  </div>
+  </div>
+
   </body>
 </html>
