footer empezado, falta arreglar imagen background

--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
       </div>
     </div>
     <div class="howdy_background">
-      <img src="./images/pic01.jpg" alt="" />
+      <!-- <img src="./images/pic01.jpg" alt="" /> -->
+      
       <div class="howdy_cuadrado">
         <h2>Howdy. This is Dopetrope.</h2>
         <p>A responsive template by HTML5 UP</p>
@@ -80,7 +81,7 @@
           </p>
           <div class="portafolio_enlace_div">
           <a class="portafolio_enlace" href="">Find out more</a>
-        </div>
+          </div>
         </div>
         <div class="portafolio_imagenes_div">
           <img  class="portafolio_imagenes_div_img" src="./images/pic03.jpg" alt="" />
@@ -139,35 +140,87 @@
           </div>
         </div>
       </div>
-      <div class="blog"></div>
-      <div class="blog_imagenes"></div>
+      <!-- <div class="blog"></div>
+      <div class="blog_imagenes"></div> -->
     
-    <div class="portafolio">
-      <hr class="hr" />
-      <h3>The Blog</h3>
-      <hr class="hr" />
+      <div class="portafolio">
+        <hr class="hr" />
+        <h3>The Blog</h3>
+        <hr class="hr" />
+      </div>
+      <div class="contenedor_blog">
+        <div class="blog_imagenes_div portafolio_imagenes_div">
+          <img  class="portafolio_imagenes_div_img" src="./images/pic08.jpg" alt="">
+          <h3>Magna tempus consequat</h3>
+          <p>Lorem ipsum dolor sit amet sit veroeros sed et blandit conseguiat sed verorres loeres et blandit adispicing fugian phaselllus tempus hedreit, totot ivtae mattis tempor, sapien sem feugiat sapien, id suscipit magna felis nec elit. Class aptent  tciti sociosque ad litor torquent per conubia nostra, per inceptos lorem ipsum dolor sit amet.</p>
+          <ul class="blog_enlace">
+            <li class="boton_blog1"><a class="enlace_imagen1" href="">Continue Reading</a></li>
+            <li class="boton_blog2"><a class="enlace_imagen2" href="">33 comments</a></li>
+            </ul>
+        </div>
+        <div class="blog_imagenes_div portafolio_imagenes_div">
+          <img class="portafolio_imagenes_div_img" src="./images/pic09.jpg" alt="">
+          <h3>Atent veroeros aliquam</h3>
+          <p>Lorem ipsum dolor sit amet sit veroeros sed et blandit conseguiat sed verorres loeres et blandit adispicing fugian phaselllus tempus hedreit, totot ivtae mattis tempor, sapien sem feugiat sapien, id suscipit magna felis nec elit. Class aptent  tciti sociosque ad litor torquent per conubia nostra, per inceptos lorem ipsum dolor sit amet.</p>
+          <ul class="blog_enlace">
+            <li class="boton_blog1"><a class="enlace_imagen1" href="">Continue Reading</a></li>
+            <li class="boton_blog2"><a class="enlace_imagen2" href="">33 comments</a></li>
+          </ul>
+        </div>
+      </div>
     </div>
-    <div class="contenedor_blog">
-    <div class="blog_imagenes_div portafolio_imagenes_div">
-      <img  class="portafolio_imagenes_div_img" src="./images/pic08.jpg" alt="">
-      <h3>Magna tempus consequat</h3>
-      <p>Lorem ipsum dolor sit amet sit veroeros sed et blandit conseguiat sed verorres loeres et blandit adispicing fugian phaselllus tempus hedreit, totot ivtae mattis tempor, sapien sem feugiat sapien, id suscipit magna felis nec elit. Class aptent  tciti sociosque ad litor torquent per conubia nostra, per inceptos lorem ipsum dolor sit amet.</p>
-      <ul class="blog_enlace">
-        <li class="boton_blog1"><img class="iconos" src="./images/documento.png" alt=""><a href="">Continue Reading</a></li>
-        <li class="boton_blog2"><img class="iconos" src="./images/bocadillo.png" alt=""><a href="">33 comments</a></li>
+  <footer class="footer"> 
+    <div class="footer_contenedor_uno">
+      <div class="footer_calendario">
+        <header>
+          <h3>Blandit nisl adispicing</h3>
+        </header>
+        <ul class="footer_ul">
+          <li>
+            <span class="fecha">
+              Jan  <br><strong>27</strong>
+            </span>
+            <h3>Lorem dolor sit amet veroeros</h3>
+            <p>Imsum dolor sit amet veroeros conseguiat blandir ipsum phasellus lorem consequat etiam.</p>
+
+          </li>
+
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+        </ul>
+
+      </div>
+      <div class="footer_about">
+
+      </div>
+    </div>
+
+    <div class="footer_contenedor_dos">
+    <div>
+
+    </div>
+    <div>
+
+    </div>
+    <div>
+
+    </div>
+
+
+    </div>
+
+    <div>
+      <ul>
+        <li>&#169 Untitled.All rights reserved.</li>
+        <li>Design: <a href="">HTML5UP</a>
+        </li>
+        <li>Demo Images: <a href="">Dreametry Doodle</a></li>
       </ul>
     </div>
-    <div class="blog_imagenes_div portafolio_imagenes_div">
-      <img class="portafolio_imagenes_div_img" src="./images/pic09.jpg" alt="">
-      <h3>Atent veroeros aliquam</h3>
-      <p>Lorem ipsum dolor sit amet sit veroeros sed et blandit conseguiat sed verorres loeres et blandit adispicing fugian phaselllus tempus hedreit, totot ivtae mattis tempor, sapien sem feugiat sapien, id suscipit magna felis nec elit. Class aptent  tciti sociosque ad litor torquent per conubia nostra, per inceptos lorem ipsum dolor sit amet.</p>
-      <ul class="blog_enlace">
-        <li class="boton_blog1"><img class="iconos" src="./images/documento.png" alt=""><a href="">Continue Reading</a></li>
-        <li class="boton_blog2"><img class="iconos" src="./images/bocadillo.png" alt=""><a href="">33 comments</a></li>
-      </ul>
-    </div>
-  </div>
-  </div>
+
+  </footer>
 
   </body>
 </html>
