solucionado background y añadido flecha del footer

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       </div>
     </div>
     <div class="howdy_background">
-      <!-- <img src="./images/pic01.jpg" alt="" /> -->
+     <!--<img src="./images/pic01.jpg" alt="" />--> 
       
       <div class="howdy_cuadrado">
         <h2>Howdy. This is Dopetrope.</h2>
@@ -35,13 +35,14 @@
     </div>
     <div class="tercer_contenedor">
       <div>
-        <img class="imagen_espacio" src="./images/logo1.jpg" alt="" />
+        <img class="imagen_espacio " src="./images/logo1.jpg" alt="" />
         <h3>Ipsum consequat</h3>
         <p>
           Lorem Ipsum is simply dummy text of the printing and typesetting
           industry.
         </p>
       </div>
+  
       <div class="logo_centro">
         <img class="imagen_espacio" src="./images/logo2.jpg" alt="" />
         <h3>Magna etiam dolor</h3>
@@ -50,8 +51,9 @@
           industry.
         </p>
       </div>
+  
       <div>
-        <img class="imagen_espacio" src="./images/logo3.jpg" alt="" />
+        <img class="imagen_espacio  " src="./images/logo3.jpg" alt="" />
         <h3>Tempus adipiscing</h3>
         <p>
           Lorem Ipsum is simply dummy text of the printing and typesetting
@@ -185,12 +187,26 @@
 
           </li>
 
-          <li></li>
+          <li>
+            
+          </li>
           <li></li>
           <li></li>
           <li></li>
         </ul>
+        <div class="calendario1">
+          <div class="calendario_flecha">
+            <div class="calendario_texto">
+              <span>Jan  </span><br>
+              <span class="calendario_numero">27  </span>
 
+            </div>
+          </div>
+          <div>
+            <h3>Lorem dolor sit amet veroeros</h3>
+            <p>Imsum dolor sit amet veroeros conseguiat blandir ipsum phasellus lorem consequat etiam.</p>
+          </div>
+        </div>
       </div>
       <div class="footer_about">
 
@@ -198,15 +214,15 @@
     </div>
 
     <div class="footer_contenedor_dos">
-    <div>
+      <div>
 
-    </div>
-    <div>
+      </div>
+      <div>
 
-    </div>
-    <div>
+      </div>
+      <div>
 
-    </div>
+      </div>
 
 
     </div>
