--- a/index.html
+++ b/index.html
@@ -411,8 +411,8 @@
     <div class="div_javascript">
       <button class="boton_javascript"></button>
     </div>
-    <div>
-      <ul>
+    <div class="ultimo_div">
+      <ul class="ultimo_div_ul">
         <li>&#169 Untitled.All rights reserved.</li>
         <li>Design: <a href="">HTML5UP</a>
         </li>
